﻿============================== next release ==============================

  new data (thanks to Pierre Gadras, LAAS-CNRS, France, for submitting data in YAML format!)
    other/semiconductor alloys/AlAs-GaAs/nk/Gadras-0.yml
    other/semiconductor alloys/AlAs-GaAs/nk/Gadras-32.yml
    other/semiconductor alloys/AlAs-GaAs/nk/Gadras-53.yml
    other/semiconductor alloys/AlAs-GaAs/nk/Gadras-90.yml
    other/semiconductor alloys/AlAs-GaAs/nk/Gadras-100.yml
	main/AlAs/nk/Gadras.yml
	main/GaAs/nk/Gadras.yml
  new data (thanks to Georgy Ermolaev, XPANCEO, Dubai, United Arab Emirates, for submitting data in YAML format!)
    main/MoOCl2/nk/Ermolaev-alpha.yml
    main/MoOCl2/nk/Ermolaev-beta.yml
    main/MoOCl2/nk/Ermolaev-gamma.yml
  new data (thanks to Tomas Klinavičius, Kaunas University of Technology, Lithuania, for submitting data!)
    main/Au/nk/Klinavicius-7.2nm.yml
    main/Au/nk/Klinavicius-11.4nm.yml
    main/Au/nk/Klinavicius-19.7nm.yml
    main/Au/nk/Klinavicius-30.4nm.yml
    main/Au/nk/Klinavicius-40.0nm.yml
  new data (thanks to Samuel Gyger, Stanford University, USA, for suggesting data!)
    other/doped crystals/MgO-LiNbO3/nk/Zelmon-o.yml
    other/doped crystals/MgO-LiNbO3/nk/Zelmon-e.yml
    other/doped crystals/MgO-LiNbO3/nk/Gayer-5-o.yml
    other/doped crystals/MgO-LiNbO3/nk/Gayer-5-e.yml
    other/doped crystals/MgO-LiNbO3/nk/Gayer-1-e.yml
  new data (thanks to Gregor Jotzu, École Polytechnique Fédérale de Lausanne, Switzerland, for suggesting data!)
    main/GaSe/nk/Chen-n-o.yml
    main/GaSe/nk/Chen-n-o.yml
    main/GaSe/nk/Chen-nk-o.yml
    main/GaSe/nk/Chen-nk-e.yml
  new data (thanks to Luis Rodriguez de Marcos, The Catholic University of America, Washington DC, USA, for submitting data!)
    main/Al2O3/nk/Rodriguez de Marcos.yml
  new data
    main/CO2/n2/Mareev.yml
    main/Xe/n2/Mareev.yml
  new data (thanks to Julien Cardin, Normandie Université, France, for submitting data in YAML format!)
    main/Ta2O5/nk/Cheikh-amorphous-3.28-4-25.yml